# FSOFT2026_1DC_3

Documentation/Iteration01/: Relatório_Primeira_Iteração.docx
Documentation/Iteration02/: Relatório_Segunda_Iteração.docx
EventManager/: CMakeLists.txt
EventManager/headers/controllers/: Controller.h
EventManager/headers/model/: AluguerMaterial.h  AluguerMaterialContainer.h  Aluguer_Material.h  Artista.h  ArtistaContainer.h  Cliente.h  ClienteContainer.h  Date.h  Evento.h  EventoContainer.h  Historico.h  IDGenerator.h  Organizador.h  OrganizadorContainer.h  RecursoMaterial.h  RecursoMaterialContainer.h  Utilizador.h
EventManager/headers/views/: Utils.h  View.h
EventManager/sources/controllers/: Controller.cpp
EventManager/sources/model/: AluguerMaterial.cpp  AluguerMaterialContainer.cpp  Aluguer_Material.cpp  Artista.cpp  ArtistaContainer.cpp  Cliente.cpp  ClienteContainer.cpp  Date.cpp  Evento.cpp  EventoContainer.cpp  IDGenerator.cpp  Organizador.cpp  OrganizadorContainer.cpp  RecursoMaterial.cpp  RecursoMaterialContainer.cpp  Recurso_Material.cpp  Utilizador.cpp  test.cpp
EventManager/sources/views/: Utils.cpp  View.cpp
Project/EventManager/: CMakeLists.txt
Project/EventManager/headers/model/: Artista.h  Cliente.h  Organizador.h  Recurso_Material.h  Utilizador.h
Project/EventManager/sources/model/: Cliente.cpp  Organizador.cpp  Utilizador.cpp
