cmake_minimum_required(VERSION 3.30)
project(EventManager)

set(CMAKE_CXX_STANDARD 14)

set(PROJECT_HEADERS_DIR
        ${PROJECT_SOURCE_DIR}/headers)
set(PROJECT_SOURCES_DIR
        ${PROJECT_SOURCE_DIR}/sources)

set(PROJECT_HEADERS_MODEL_DIR
        ${PROJECT_HEADERS_DIR}/model)
set(PROJECT_SOURCES_MODEL_DIR
        ${PROJECT_SOURCES_DIR}/model)
include_directories(
        ${PROJECT_HEADERS_MODEL_DIR}
        ${PROJECT_SOURCES_MODEL_DIR})
set(MODEL_SOURCE_FILES
        ${PROJECT_HEADERS_MODEL_DIR}/Utilizador.h
        ${PROJECT_HEADERS_MODEL_DIR}/Cliente.h
        ${PROJECT_SOURCES_MODEL_DIR}/Cliente.cpp
        ${PROJECT_HEADERS_MODEL_DIR}/ClienteContainer.h
        ${PROJECT_HEADERS_MODEL_DIR}/Organizador.h
        ${PROJECT_SOURCES_MODEL_DIR}/Organizador.cpp
        ${PROJECT_HEADERS_MODEL_DIR}/OrgaizadorContainer.h
        ${PROJECT_HEADERS_MODEL_DIR}/Artista.h
        ${PROJECT_HEADERS_MODEL_DIR}/ArtistaContainer.h
        ${PROJECT_HEADERS_MODEL_DIR}/Evento.h
        ${PROJECT_HEADERS_MODEL_DIR}/EventoContainer.h
        ${PROJECT_HEADERS_MODEL_DIR}/Date.h
        ${PROJECT_SOURCES_MODEL_DIR}/Date.cpp
        ${PROJECT_HEADERS_MODEL_DIR}/AluguerMaterial.h
        ${PROJECT_HEADERS_MODEL_DIR}/AluguerMaterialContainer.h
        ${PROJECT_HEADERS_MODEL_DIR}/RecursoMaterial.h
        ${PROJECT_HEADERS_MODEL_DIR}/RecursoMaterialContainer.h
)
set(PROJECT_HEADERS_VIEWS_DIR
        ${PROJECT_HEADERS_DIR}/Views)
set(PROJECT_SOURCES_VIEWS_DIR
        ${PROJECT_SOURCES_DIR}/Views)
include_directories(
        ${PROJECT_HEADERS_VIEWS_DIR}
        ${PROJECT_SOURCES_VIEWS_DIR})
set(VIEWS_SOURCE_FILES
        ${PROJECT_HEADERS_VIEWS_DIR}/View.h
        ${PROJECT_HEADERS_VIEWS_DIR}/View.cpp
        ${PROJECT_HEADERS_VIEWS_DIR}/Utils.h
        ${PROJECT_SOURCES_VIEWS_DIR}/Utils.cpp)

add_executable(EventManager main.cpp
        headers/model/Utilizador.h
        headers/model/Cliente.h
        sources/model/Cliente.cpp
        headers/model/ClienteContainer.h
        headers/model/Organizador.h
        sources/model/Organizador.cpp
        headers/model/OrganizadorContainer.h
        headers/model/Date.h
        sources/model/Date.cpp
        headers/model/Evento.h
        sources/model/Evento.cpp
        headers/model/EventoContainer.h
        headers/model/Artista.h
        sources/model/Artista.cpp
        headers/model/ArtistaContainer.h
        headers/model/AluguerMaterial.h
        sources/model/AluguerMaterial.cpp
        headers/model/AluguerMaterialContainer.h
        headers/model/RecursoMaterial.h
        sources/model/RecursoMaterial.cpp
        headers/model/RecursoMaterialContainer.h
        sources/model/ClienteContainer.cpp
        sources/model/Utilizador.cpp
        sources/views/View.cpp
        sources/views/Utils.cpp
        headers/views/View.h
        headers/views/Utils.h
        sources/model/AluguerMaterialContainer.cpp
        sources/model/ArtistaContainer.cpp
        sources/model/EventoContainer.cpp
        sources/model/OrganizadorContainer.cpp
        sources/model/RecursoMaterialContainer.cpp
)
